--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MantiBracket/MeltiBot#readme",
   "dependencies": {
+    "mysql": "^2.18.1",
     "ws": "^8.9.0"
   }
 }
